<resources>
    <string name="app_name">assign</string>
    <string name="welcome">Welcome</string>
    <string name="to_the_app">to the app</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">No Account?</string>
    <string name="confirm_login">Confirm Login</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="re_enter_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="upload_photo">upload photo</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="contact">Contact</string>
    <string name="number">number</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="type_message_here">Type message here...</string>
    <string name="send">SEND</string>
    <string name="therapist">Therapist:</string>
    <string name="date">Date:</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time:</string>
    <string name="select_time">Select Time</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="view_appointment">View Appointment</string>
    <string name="confirm">Confirm</string>

    <string-array name="therapist_name">
        <item>Renij</item>
        <item>Alin</item>
        <item>Carina</item>
        <item>Rachel</item>
        <item>Pam</item>
    </string-array>
</resources>