<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/photoBtn"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF8C7"
                android:text="@string/upload_photo"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nameEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:ems="13"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dobTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dob"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dobEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:ems="13"
                android:hint="@string/dob"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contactTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/contact"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/numEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="13"
                android:hint="@string/number"
                android:inputType="phone"
                android:textSize="20sp"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addressTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addressEditTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="13"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF8C7"
                android:text="@string/save"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF8C7"
                android:text="@string/cancel"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>